--- a/admin/index.html
+++ b/admin/index.html
@@ -257,6 +257,7 @@
     <script src="app/pages/tipobanner/tipobanner.controller.js"></script>
     <script src="app/pages/config/config.controller.js"></script>
     <script src="app/pages/blog/blog.controller.js"></script>
+    <!-- <script src="app/pages/ui-elements/ui-elements.controller.js"></script> -->
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
