--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<footer id="footer-container">
 
 			<div id="footer-top">
-
+			<div id="trabaja" style="display:none;width:100%;" ng-include="'templates/seccion/trabaja-con-nosotros.html'"></div>
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-3">
@@ -114,9 +114,9 @@
 									<!-- <li><a href="#inicio" ng-click="scrollTo('inicio');$event.preventDefault();">Inicio</a></li>
 									<li><a href="#servicios" ng-click="scrollTo('servicios');$event.preventDefault();">Servicios</a></li> -->
 									<!-- <li><a href="#" ng-click="verBlog();$event.preventDefault();">Noticias</a></li> -->
-									<li><a href="#aviso" ng-click="">Aviso Legal</a></li>
+									<li><a href="#aviso" fancybox >Aviso Legal</a></li>
 
-									<li><a href="#trabaja" ng-click="">Trabaja con nosotros</a></li>
+									<li><a href="#trabaja" fancybox>Trabaja con nosotros</a></li>
 									<!-- <li><a href="#contacto" ng-click="scrollTo('contacto');$event.preventDefault();">Contacto</a></li> -->
 								</ul>
 
