--- a/index.html
+++ b/index.html
@@ -101,22 +101,25 @@
 		<footer id="footer-container">
 
 			<div id="footer-top">
-			<div id="trabaja" style="display:none;width:100%;" ng-include="'templates/seccion/trabaja-con-nosotros.html'"></div>
+				<div id="trabaja" style="display:none;width:100%;" ng-include="'templates/seccion/trabaja-con-nosotros.html'"></div>
+				<div id="aviso" style="display:none;width:100%;" ng-include="'templates/seccion/aviso-legal.html'"></div>
+				<div id="terminos" style="display:none;width:100%;" ng-include="'templates/seccion/terminos.html'"></div>
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-3">
 
 							<div class="widget widget-pages">
 
-								<h6 class="widget-title">Secciones</h6>
+								<h6 class="widget-title">Empresa</h6>
 
 								<ul>
 									<!-- <li><a href="#inicio" ng-click="scrollTo('inicio');$event.preventDefault();">Inicio</a></li>
 									<li><a href="#servicios" ng-click="scrollTo('servicios');$event.preventDefault();">Servicios</a></li> -->
 									<!-- <li><a href="#" ng-click="verBlog();$event.preventDefault();">Noticias</a></li> -->
-									<li><a href="#aviso" fancybox >Aviso Legal</a></li>
-
 									<li><a href="#trabaja" fancybox>Trabaja con nosotros</a></li>
+									<li><a href="#aviso" fancybox >Aviso Legal</a></li>
+									<li><a href="#terminos" fancybox >Términos y Condiciones</a></li>
+
 									<!-- <li><a href="#contacto" ng-click="scrollTo('contacto');$event.preventDefault();">Contacto</a></li> -->
 								</ul>
 
@@ -127,7 +130,7 @@
 
 							<div class="widget widget-latest-posts">
 
-								<h6 class="widget-title">Blog Posts</h6>
+								<h6 class="widget-title">Ultimas Noticias</h6>
 
 								<ul>
 									<li>
