--- a/admin/index.html
+++ b/admin/index.html
@@ -261,6 +261,8 @@
     <script src="app/pages/cliente/cliente.controller.js"></script>
     <script src="app/pages/usuario/usuario.controller.js"></script>
     <script src="app/pages/perfil/perfil.controller.js"></script>
+    <script src="app/pages/idioma/idioma.controller.js"></script>
+    <script src="app/pages/mi-galeria/gallery.controller.js"></script>
 
     <script src="app/components/directives/vector-map.directive.js"></script>
     <script src="app/components/directives/validate-on-submit.directive.js"></script>
