avance galeria descargados

--- a/admin/app/pages/mi-galeria/gallery.html
+++ b/admin/app/pages/mi-galeria/gallery.html
@@ -1,45 +1,15 @@
 <div class="page page-extra pull-to-header">
-
-
-
   <ol class="breadcrumb bg-white">
-    <li><a ui-sref="dashboard">Home</a></li>
-    <li><a href="javascript:;">Extra Pages</a></li>
-    <li class="active">Gallery</li>
+    <li><a ui-sref="dashboard">Inicio</a></li>
+    <li class="active">Mi Galeria</li>
   </ol>
-
-
-  <!-- row -->
   <div class="row">
-
-
     <!-- col -->
     <div class="col-md-12">
-
       <div class="tile">
-
         <uib-tabset class="minotaur-tab minotaur-tab-light padded">
-
+          
           <uib-tab heading="4 Columns">
-
-            <ul class="mix-filter pull-right">
-              <li class="filter" data-filter="all">
-                All
-              </li>
-              <li class="filter" data-filter=".cats">
-                Cats
-              </li>
-              <li class="filter" data-filter=".animals">
-                Animals
-              </li>
-              <li class="filter" data-filter=".cities">
-                Cities
-              </li>
-              <li class="filter" data-filter=".cats, .animals">
-                Cats and Animals
-              </li>
-            </ul>
-
             <ul class="mix-controls">
               <li class="select-all">
                 <label class="checkbox minotaur-checkbox inline-block m-0">Select all
@@ -47,22 +17,14 @@
                 </label>
               </li>
               <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-envelope-o"></i> Email</a>
+                <a href="javascript:;"><i class="fa fa-share-alt"></i> Compartir</a>
               </li>
               <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-download"></i> Download</a>
-              </li>
-              <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-pencil"></i> Edit</a>
-              </li>
-              <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-trash-o"></i> Delete</a>
+                <a href="javascript:;"><i class="fa fa-download"></i> Descargar</a>
               </li>
             </ul>
 
-            <!-- row -->
             <div class="row mix-grid">
-
               <div class="gallery" ng-mixitup magnific-popup="{
                 delegate: 'a.img-preview',
                 type: 'image',
@@ -105,30 +67,9 @@
               </div>
 
             </div>
-            <!-- /row -->
-
           </uib-tab>
 
           <uib-tab heading="3 Columns">
-
-            <ul class="mix-filter pull-right">
-              <li class="filter active" data-filter="all">
-                All
-              </li>
-              <li class="filter" data-filter=".cats">
-                Cats
-              </li>
-              <li class="filter" data-filter=".animals">
-                Animals
-              </li>
-              <li class="filter" data-filter=".cities">
-                Cities
-              </li>
-              <li class="filter" data-filter=".cats, .animals">
-                Cats and Animals
-              </li>
-            </ul>
-
             <ul class="mix-controls">
               <li class="select-all">
                 <label class="checkbox minotaur-checkbox inline-block m-0">Select all
@@ -136,22 +77,15 @@
                 </label>
               </li>
               <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-envelope-o"></i> Email</a>
+                <a href="javascript:;"><i class="fa fa-share-alt"></i> Compartir</a>
               </li>
               <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-download"></i> Download</a>
-              </li>
-              <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-pencil"></i> Edit</a>
-              </li>
-              <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-trash-o"></i> Delete</a>
+                <a href="javascript:;"><i class="fa fa-download"></i> Descargar</a>
               </li>
             </ul>
 
             <!-- row -->
             <div class="row mix-grid">
-
               <div class="gallery" ng-mixitup magnific-popup="{
                 delegate: 'a.img-preview',
                 type: 'image',
@@ -189,35 +123,12 @@
                     </div>
                   </div>
                 </div>
-                <!-- /col -->
-
               </div>
 
             </div>
-            <!-- /row -->
-
           </uib-tab>
 
           <uib-tab heading="2 Columns">
-
-            <ul class="mix-filter pull-right">
-              <li class="filter active" data-filter="all">
-                All
-              </li>
-              <li class="filter" data-filter=".cats">
-                Cats
-              </li>
-              <li class="filter" data-filter=".animals">
-                Animals
-              </li>
-              <li class="filter" data-filter=".cities">
-                Cities
-              </li>
-              <li class="filter" data-filter=".cats, .animals">
-                Cats and Animals
-              </li>
-            </ul>
-
             <ul class="mix-controls">
               <li class="select-all">
                 <label class="checkbox minotaur-checkbox inline-block m-0">Select all
@@ -225,22 +136,14 @@
                 </label>
               </li>
               <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-envelope-o"></i> Email</a>
+                <a href="javascript:;"><i class="fa fa-share-alt"></i> Compartir</a>
               </li>
               <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-download"></i> Download</a>
-              </li>
-              <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-pencil"></i> Edit</a>
-              </li>
-              <li ng-class="{'disabled': !ctrl.isSelected}">
-                <a href="javascript:;"><i class="fa fa-trash-o"></i> Delete</a>
+                <a href="javascript:;"><i class="fa fa-download"></i> Descargar</a>
               </li>
             </ul>
-
             <!-- row -->
             <div class="row mix-grid">
-
               <div class="gallery" ng-mixitup magnific-popup="{
                 delegate: 'a.img-preview',
                 type: 'image',
@@ -253,7 +156,6 @@
                 }
                }"
               >
-
                 <!-- col -->
                 <div class="col-md-6 col-sm-6 mb-20 mix {{image.category}}" ng-class="{'selected': image.selected}" ng-repeat="image in ctrl.images">
                   <div class="img-container">
@@ -283,10 +185,8 @@
               </div>
 
             </div>
-            <!-- /row -->
-
-
           </uib-tab>
+          
         </uib-tabset>
 
       </div>
